php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44216 strftime segfaults on large negative value
Submitted: 2008-02-22 16:25 UTC Modified: 2008-02-22 17:49 UTC
From: j dot vdkamp at connectux dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.2.5 OS: Linux 64bit
Private report: No CVE-ID: None
 [2008-02-22 16:25 UTC] j dot vdkamp at connectux dot com
Description:
------------
The following php code crashes on 64bit systems:

php -r 'print strftime("%c", -6847808401);'

The format string is of no importance, only the large negative value is.

Reproduce code:
---------------
print strftime("%c", -6847808401);

Expected result:
----------------
Sun Dec 31 22:59:59 1752

Actual result:
--------------
Segmentation fault

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-02-22 17:49 UTC] derick@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 11:00:01 2026 UTC