- MFH: Fixed bug #44216 (strftime segfaults on large negative value).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@253541 c90b9560-bf6c-de11-be94-00142212c4b1